# -Optimalization_Methods---FFP

./: PLAN_ANALIZY.txt  README.md  config.toml  pyproject.toml  run.py
instances/2-obj/costs/0050_0002/: 0050_0002_01.txt  0050_0002_02.txt  0050_0002_03.txt  0050_0002_04.txt  0050_0002_05.txt  0050_0002_06.txt  0050_0002_07.txt  0050_0002_08.txt  0050_0002_09.txt  0050_0002_10.txt  0050_0002_11.txt  0050_0002_12.txt  0050_0002_13.txt  0050_0002_14.txt  0050_0002_15.txt  0050_0002_16.txt  0050_0002_17.txt  0050_0002_18.txt  0050_0002_19.txt  (+11 more)
research_results/125/after_tunning/: summary.csv
research_results/125/after_tunning[5x]/: 2obj_0125_16_convergence.csv  permutation.txt
research_results/125/after_tunning_run_4_instances[10x]/: console_output.txt
research_results/250/after_tunning/: 2obj_0250_28_convergence.csv
research_results/250/after_tunning[5x]/: permutation.txt  summary.csv
research_results/250/after_tunning_run_4_instances[10x]/: console_output.txt
research_results/50/after_tunning/: summary.csv
research_results/50/after_tunning[5x]/: 2obj_0050_01_convergence.csv  permutation.txt
research_results/50/after_tunning_run_4_instances[10x]/: console_output.txt
research_results/tunning/: 125.txt  250.txt  50.txt
results/run_20260614_002341/: summary.csv
results/run_20260614_002341/2obj_0050_01/: 2obj_0050_01_convergence.csv
results/run_20260614_002341/2obj_0100_01/: 2obj_0100_01_convergence.csv
src/ffp/: __init__.py  cli.py  config.py  experiment.py  genetic.py  heuristics.py  instance.py  operators.py  plotting.py  simulator.py
(+807 files in other folders)
