[project]
name = "ffp-genetic"
version = "0.1.0"
description = "Algorytm genetyczny dla problemu strazackiego (Firefighter Problem) z trzema usprawnieniami."
authors = [
    {name = "Autorzy projektu", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.8,<4.0)",
    "numpy (>=1.26,<3.0)",
    "pandas (>=2.1,<3.0)",
]

[project.scripts]
ffp = "ffp.cli:main"

[tool.poetry]
packages = [{include = "ffp", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
